<resources>
    <string name="app_name" translatable="false">Edu Chat</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_profile_picture_content_description">the user\'s profile picture</string>
    <string name="enter_message_hint">Type a Message Here</string>
    <string name="none_joined_yet">None joined yet…</string>
    <string name="send">Send</string>
    <string name="chats">CHATS</string>
    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="chatInfo_string">Chat info</string>
    <string name="description_of_the_chat_goes_here">Description of the chat goes here</string>
    <string name="edu_chat">Edu.Chat</string>
    <string name="president_of_business_club">President of Business Club</string>
    <string name="this_is_where_the_description_will_be_it_will_usually_consist_of_about_two_to_three_sentences_it_will_probably_be_about_two_or_three_lines">This is where the description will be. It will usually consist of about two to three sentences. It will probably be about two or three lines.</string>
    <string name="university">University</string>
    <string name="school">School</string>
    <string name="department">Department</string>
    <string name="year_of_graduation">Year of graduation</string>
    <string name="messagedate">MessageDate</string>
    <string name="chat_name">Chat name</string>
    <string name="chat_description">Chat description</string>
    <string name="chat_tags">Chat Tags</string>
    <string name="chat_tags_hint">Science, chemistry, freshman</string>
    <string name="chat_description_hint">Professor name, class # …</string>
    <string name="Message">message</string>
    <string name="Nameofsender">someone</string>
    <string name="file_name">File name</string>
    <string name="size">Size:</string>
    <string name="size_of_file">10MB</string>
    <string name="message_in_right_bubble">message</string>
    <string name="sendername_in_right_bubble">someone</string>
    <string name="message_body">Body</string>
    <string name="message_sent_time">Time</string>
    <string name="rowheader">rowHeader</string>
    <string name="no_messages_yet">No Messages Yet</string>
    <string name="unread_count">1</string>
    <string name="posted_by_person">posted By</string>
    <string name="date_of_posting">Date</string>
    <string name="nothing_found">Nothing found</string>
    <string name="public_string">Public</string>
    <string name="please_provide_a_icon">Please provide a icon</string>
    <string name="none_office_hour_yet">None office hour yet…</string>
    <string name="broadcasts">BROADCASTS</string>
    <string name="title_activity_digital_office_hours">Digital Office Hours</string>
    <string name="notifications">Notifications</string>
    <string name="leave_the_chat">Leave the Chat</string>
    <string name="checkcolor">white</string>
    <string name="title_activity_edit_office_hour">EditOfficeHourActivity</string>
    <string name="notificationslabel">notifications</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="other">Other</string>
    <string name="go">Go</string>
    <string name="goforward">Continue</string>
    <string name="sign_up_claim">By clicking Sign Up, you agree to our Terms and that you have read our Data Policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="university_school">University/School</string>
    <string name="school_email_address">School Email Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_password_hint">Forgotten your password? Enter your email address below to begin the reset process.</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account?<u> Sign up!</u></string>
    <string name="upload">Upload your profile picture</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="area_of_study">Areas of study</string>
    <string name="mainsearch">Search for Classes, Chats &amp; people</string>
    <string name="settings">Settings</string>
    <string name="account_and_security">Account and Security</string>
    <string name="general">General</string>
    <string name="about">About Edu.Chat</string>
    <string name="version">Version</string>
    <string name="enter_the_names_of_the_users_to_add">Enter the names of the Users to add</string>

    <string name="email">E-mail</string>
    <string name="phone">Phone Number</string>
    <string name="reset_password">Reset Password</string>

    <string name="reset_password_direction">Please enter your E-mail.</string>
    <string name="privacy">Privacy</string>
    <string name="profile">Profile</string>
    <string name="status">Status</string>
    <string name="blocked">Blocked</string>

    <string name="saved_profile_choice">Profile Choice</string>

    <string name="search_chat_broadcast_prompt">search for chat and broadcast names</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_chats_yet">No chats to display.</string>
    <string name="logging_out_">Logging Out…</string>
    <string name="incorrect_user_or_pass">Incorrect Username and/or Password</string>
    <string name="login_failed">Login Failed</string>
    <string name="failure_to_find_institution">Failure to find institution</string>
    <string name="enter_valid_institution">Please enter a valid institution</string>
    <string name="enter_first_name">Please enter your first name</string>
    <string name="enter_last_name">Please enter your last name</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="saved_status_choice">Status Choice</string>
    <string name="change_text_size">Change Text Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="textSize_preview">Text Size Preview</string>
    <string name="textSize_direction">By moving the bar blow, you can set text size.</string>
    <string name="textSize_direction2">By clicking done, you can save your changes.</string>
    <string name="saved_textSize">Saved Text Size</string>
    <string name="saved_progress">Saved Progress in Settings General Text</string>
    <string name="full_name">Full Name</string>
    <string name="display_name">Display name</string>

    <string name="new_chat">new chat</string>
    <string name="new_class">new class</string>

    <string name="display_year_of_graduation">Display year of graduation</string>
    <string name="display_areas_of_study">Display areas of study</string>
    <string name="display_areas_of_study_this_could_be_more_than_one_line">Display areas of study. This could be more than one line.</string>
    <string name="tags">Tags</string>
    <string name="edit">EDIT</string>
    <string name="change_picture">Change Picture</string>
    <string name="education">Education</string>
    <string name="nav_privacy"><![CDATA[Privacy & Terms]]></string>
    <string name="nav_acknowledgement">Acknowledgement</string>
    <string name="help_and_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="account">Account</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="logout">Log Out</string>
    <string name="classes">CLASSES</string>
    <string name="save">SAVE</string>
    <string name="please_enter_grad_year">Please enter a valid graduation year.</string>
    <string name="please_enter_a_o_s">Please enter an area(s) of study.</string>
    <string name="update_failed_try_later">Update failed. Please try again later.</string>
    <string name="failue_load_prof_pic">Failure loading profile picture.</string>
    <string name="tag">Tag</string>
    <string name="tag_placeholder">Tag Placeholder</string>
    <string name="graduating_year">Graduating Year</string>
    <string name="display_area_of_study">Display area of study</string>
    <string name="enter_areas_math_computer_science_etc">Add areas- Math, Computer Science, etc</string>
    <string name="title_activity_create_classes">CreateClassesActivity</string>
    <string name="course_name">Course Name</string>
    <string name="course_code">Course Code</string>
    <string name="required_fields">required fields</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="chat_closed">This group can only be joined and viewed by the members invited</string>
    <string name="chat_open">This group can be joined and viewed by anyone</string>
    <string name="create_chat">create chat</string>
    <string name="select_school_direction">Please Select Your School</string>
    <string name="empty_list_grid_view">This list is empty. Add something!</string>
    <string name="changes_saved_success">Changes saved successfully</string>
    <string name="notifications_direction">Push Notifications</string>
    <string name="search">Search…</string>
    <string name="click_on_your_interests_to_add_a_tag">Click on your interests to add a tag</string>
    <string name="search_a_tag">Search a tag</string>
    <string name="no_chats_yet_description">Tap the plus button to create a new chat or tap the search button to join one.</string>
    <string name="no_classes_yet">No classes to display.</string>
    <string name="no_classes_yet_description">Tap the plus button to create a new class or tap the search button to join one.</string>
    <string name="change_display_name_direction">Please enter you new name.</string>
    <string name="announcement">Announcements</string>
    <string name="lecture">Lecture Discussion</string>
    <string name="bot">Bot Questions</string>
    <string name="switch_open">OPEN</string>
    <string name="switch_closed">CLOSED</string>
    <string name="expired_grad_year">Grad year no longer valid, defaulting to current year.</string>
    <string name="loading_user_data">Loading user data…</string>
    <string name="saving_user_data">Saving user data…</string>
    <string name="anonymous">Anonymous Messaging</string>
    <string name="please_wait">Please wait…</string>
    <string name="next">NEXT</string>
    <string name="no_subchats_yet">No Subchats Yet</string>
    <string name="create_new_subchat">Create New Subchat</string>
    <string name="is_typing">Somebody is Typing</string>
    <string name="search_to_join">Tap the search button to join a new class.</string>
    <string name="no_content">Tap the plus button to create a new class or tap the search button to join one.</string>
    <string name="chat_information">Chat Information</string>
    <string name="restricted_access">Sorry you do not have the right to do this</string>
    <string name="save_normal">Save</string>
</resources>
