<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#0F5C80">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/change_display_name"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/change_display_name_direction"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/Black"
        android:theme="@style/settings_dialog"
        android:drawableEnd="@drawable/ic_action_navigation_close"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/Black"
        android:theme="@style/settings_dialog"
        android:drawableEnd="@drawable/ic_action_navigation_close"/>


</LinearLayout>