<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/account"
        android:textColor="#0F5C80"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="#0F5C80"/>

    <TextView
        android:id="@+id/settings_changeDisplayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/change_display_name"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="#787878"/>

    <TextView
        android:id="@+id/settings_changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/change_password"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="#787878"/>

    <TextView
        android:id="@+id/settings_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/language"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="#787878"/>

    <TextView
        android:id="@+id/settings_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/logout"
        android:textColor="@color/Black"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="#787878"/>

</LinearLayout>
