<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="edu_chat.android.com.edu_chat.controller.settings.SettingsAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settings_account"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="0dp"
            android:background="@color/Black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/account_and_security"
                android:textColor="@color/White"
                android:textSize="20sp"/>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/Black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/settings_account_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/Black"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textColor="@color/Black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/settings_account_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/Black"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/settings_account_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:drawableEnd="@drawable/quantum_ic_play_arrow_grey600_48"
            android:text="@string/privacy"
            android:textColor="@color/Black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/settings_account_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/Black"
            android:textSize="16sp"/>
    </LinearLayout>

</FrameLayout>
